// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header styles should render and match snapshot for mobileOnly styles 1`] = `
.circuit-0 {
  font-size: 17px;
  line-height: 24px;
  font-weight: 700;
  color: #FAFBFC;
  margin-left: 16px;
}

.circuit-2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 64px;
  background-color: #000000;
  padding: 16px;
  z-index: 600;
  position: -webkit-sticky;
  position: sticky;
}

@media (min-width:960px) {
  .circuit-2 {
    display: none;
  }
}

<div
  class="circuit-2 circuit-3"
>
  <h1
    class="circuit-0 circuit-1"
  >
    Title
  </h1>
</div>
`;

exports[`Header styles should render with default styles 1`] = `
.circuit-2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 64px;
  background-color: #000000;
  padding: 16px;
  z-index: 600;
  position: -webkit-sticky;
  position: sticky;
}

.circuit-0 {
  font-size: 17px;
  line-height: 24px;
  font-weight: 700;
  color: #FAFBFC;
  margin-left: 16px;
}

<div
  class="circuit-2 circuit-3"
>
  <h1
    class="circuit-0 circuit-1"
  >
    Title
  </h1>
</div>
`;
